--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ numpy==2.2.6
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
-psycopg2-binary==2.9.6
+psycopg2-binary<2.9
 pycparser==2.23
 pyngrok==7.4.0
 python-dateutil==2.9.0.post0
@@ -42,4 +42,5 @@ uritemplate==4.2.0
 waitress==3.0.2
 webencodings==0.5.1
 whitenoise==6.11.0
+
 
