--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ numpy==2.2.6
 packaging==25.0
 pandas==2.3.3
 pillow==11.3.0
-psycopg2-binary<2.9
+psycopg2-binary
 pycparser==2.23
 pyngrok==7.4.0
 python-dateutil==2.9.0.post0
