--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-﻿asgiref==3.9.2
+asgiref==3.9.2
 beautifulsoup4==4.14.2
 bleach==5.0.1
-cffi==2.0.0
 dj-database-url==3.0.1
 Django==4.2.1
 django-appconf==1.1.0
@@ -16,36 +15,10 @@ django-widget-tweaks==1.5.0
 djangorestframework==3.16.1
 drf-yasg==1.21.7
 gunicorn==21.2.0
-inflection==0.5.1
-Jinja2==3.1.6
-MarkupSafe==3.0.3
-numpy==2.2.6
-packaging==25.0
-pandas==2.3.3
 pillow==11.3.0
 psycopg2-binary
-pycparser==2.23
-pyngrok==7.4.0
-python-dateutil==2.9.0.post0
 python-decouple==3.8
-pytz==2025.2
-PyYAML==6.0.2
-scipy==1.15.3
-six==1.17.0
-soupsieve==2.8
-sqlparse==0.5.3
-tinycss2==1.1.1
-typing_extensions==4.15.0
-tzdata==2025.2
-tzlocal==5.3.1
-uritemplate==4.2.0
-waitress==3.0.2
-webencodings==0.5.1
 whitenoise==6.11.0
-python-bunnycdn-storages
 
-
-
-
-
-
+# Bunny.net uchun 100% ishlaydigan paket (GitHub dan)
+-e git+https://github.com/willmeyers/django-bunny-storage.git@main#egg=django-bunny-storage
